--- a/src/components/progressbar/progressbar.styles.scss
+++ b/src/components/progressbar/progressbar.styles.scss
@@ -1,5 +1,6 @@
 .progressbar-wrapper {
     background-color: #fff;
+    border-radius: 5px !important;
     padding: 40px;
     display: flex;
     flex-direction: column;
