--- a/src/templates/default/menu/menu.scss
+++ b/src/templates/default/menu/menu.scss
@@ -18,7 +18,7 @@
       align-items: center;
       justify-content: center;
       img {
-        margin: 0 15px;
+        margin: 0 auto;
         height: 40px;
       }
     }
