--- a/src/pages/transactions/transactions.styles.scss
+++ b/src/pages/transactions/transactions.styles.scss
@@ -1,5 +1,41 @@
 .transactions {
     overflow: scroll;
+    .cards {
+        display: flex;
+        flex-direction: row;
+
+        .card {
+            padding: 20px;
+            border-radius: 5px;
+            background-color: #4e73df;
+            color: #fff;
+            cursor: pointer;
+            box-sizing: border-box;
+            display: flex;
+            flex-direction: row;
+            border-radius: 5px;
+            align-items: center;
+            margin-right: 20px;
+
+            img {
+                width: 32px;
+                height: 32px;
+            }
+
+            h4 {
+                text-align: center;
+                font-weight: 600;
+                width: 170px;
+            }
+
+            &.balance {
+                background-color: #e74a3b;
+            }
+            &.transfer {
+                background-color: #4e73df;
+            }
+        }
+    }
     .header {
         padding: 15px 0;
         display: flex;
@@ -50,7 +86,7 @@
         span {
             font-weight: 400;
             font-family: "DM Sans Regular";
-            letter-spacing: .4px;
+            letter-spacing: 0.4px;
         }
         span.active {
             color: #00b127;
