--- a/src/templates/auth/auth.styles.scss
+++ b/src/templates/auth/auth.styles.scss
@@ -13,6 +13,7 @@ section.auth {
         display: flex;
         flex-direction: row;
         align-items: center;
+        justify-content: center;
         h1 {
             text-align: center;
             font-weight: 500;
@@ -22,8 +23,7 @@ section.auth {
             color: #020e23;
         }
         img {
-            height: 48px;
-            margin-right: 20px;
+            height: 60px;
         }
     }
     .flag {
