--- a/src/pages/dashboard/account-info/account-info.styles.scss
+++ b/src/pages/dashboard/account-info/account-info.styles.scss
@@ -1,23 +1,40 @@
 .account-info {
     .cards {
+        max-width: 1000px;
+        margin: 0 auto;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
         ._card {
             border-radius: 10px;
             margin: 20px 10px;
-            flex-basis: 33.3%;
+            flex-grow: 1;
             .content {
                 padding: 20px 20px 10px 20px;
-                display: flex;
-                flex-direction: row;
-                align-items: center;
-                justify-content: space-between;
                 color: #fff;
                 h3 {
                     font-family: "DM Sans Bold";
-                    font-size: 50px;
+                    font-size: 32px;
+                    text-align: center;
+                    padding: 20px 0;
                 }
                 p {
                     font-family: "DM Sans Regular";
                     font-size: 20px;
+                    display: flex;
+                    flex-direction: row;
+                    span {
+                        flex-grow: 1;
+                        text-align: center;
+                    }
+                }
+                .debit-cards {
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: space-around;
+                    max-width: 250px;
+                    margin: 0 auto;
+                    padding: 11px 0;
                 }
             }
             .footer {
@@ -58,6 +75,13 @@
                 box-shadow: 0px 20px 50px rgba(104, 96, 25, 0.3);
                 .footer {
                     background: #ba7f30;
+                }
+            }
+            &.blue {
+                background: #4e73df;
+                box-shadow: 0px 20px 50px rgba(104, 96, 25, 0.3);
+                .footer {
+                    background: #4472bb;
                 }
             }
         }
