--- a/src/pages/dashboard/dashboard.styles.scss
+++ b/src/pages/dashboard/dashboard.styles.scss
@@ -26,7 +26,7 @@
     }
   }
   .ads {
-    display: flex;
+    display: none;
     flex-direction: row;
     justify-content: space-around;
     padding: 30px;
@@ -36,7 +36,7 @@
   }
   .cards {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-around;
 
     .card {
@@ -50,6 +50,7 @@
       flex-direction: row;
       border-radius: 5px;
       align-items: center;
+      margin: 10px 0;
 
       img {
         width: 32px;
@@ -77,6 +78,15 @@
       &.profile {
         background-color: #f6c23e;
       }
+    }
+  }
+  @media (min-width: 700px) {
+    .cards {
+      flex-direction: row;
+      flex-wrap: wrap;
+    }
+    .ads {
+      display: flex;
     }
   }
 }
