--- a/src/templates/default/header/profile/profile.scss
+++ b/src/templates/default/header/profile/profile.scss
@@ -1,27 +1,27 @@
 header {
   .profile {
-    flex-basis: 300px;
     position: relative;
     &.show {
       width: 100%;
     }
     &.hide {
       width: 0;
+      display: none;
     }
     > div {
       align-self: flex-end;
-      padding: 10px;
+      padding: 10px 20px;
       display: flex;
       flex-direction: row;
       align-items: center;
       cursor: pointer;
+      justify-content: flex-end;
 
       strong {
         line-height: 40px;
         padding: 0 10px;
         font-size: 14px;
         font-weight: 400;
-        flex-grow: 1;
       }
 
       img {
