--- a/src/pages/dashboard/account-info/account-info.styles.scss
+++ b/src/pages/dashboard/account-info/account-info.styles.scss
@@ -6,8 +6,9 @@
         justify-content: space-around;
         ._card {
             border-radius: 10px;
-            margin: 20px 10px;
+            margin: 20px;
             flex-grow: 1;
+            flex-basis: 25%;
             .content {
                 padding: 20px 20px 10px 20px;
                 color: #fff;
@@ -85,7 +86,7 @@
             }
         }
     }
-    @media (min-width: 1000px) {
+    @media (min-width: 956px) {
         .cards {
             display: flex;
             flex-direction: row;
