--- a/src/app.styles.scss
+++ b/src/app.styles.scss
@@ -2,9 +2,9 @@
   margin: 0;
 }
 :root {
-  --primary-dark: #18a0fb;
-  --secondary-dark: #4472bb;
-  --bg-dark: #2f4f83;
+  --primary-dark: #ce5642;
+  --secondary-dark: #FF6D00;
+  --bg-dark: #FF6D00;
   --text-light: #fff;
   --bg-main: #ededed;
 }
