--- a/src/templates/auth/auth.styles.scss
+++ b/src/templates/auth/auth.styles.scss
@@ -130,13 +130,14 @@ section.auth {
         left: 0;
         bottom: 0;
         > div {
-            flex-basis: 50%;
+            flex-basis: 700px;
             height: inherit;
         }
 
         > div:last-child {
             background: url(../../assets/images/auth-bg.jpg) no-repeat;
             background-size: cover;
+            flex-grow: 1;
         }
     }
 }
