--- a/src/templates/default/menu/menu.scss
+++ b/src/templates/default/menu/menu.scss
@@ -20,6 +20,8 @@
       img {
         margin: 0 auto;
         height: 40px;
+        border: 5px solid #fff;
+        border-radius: 3px;
       }
     }
     .space {
